[package]
name = "pq-fabric"
version = "0.1.0"
edition = "2021"
description = "CLI for executing Power Query M expressions via the Microsoft Fabric API; preview partitions, test transformations, inspect steps"
license = "GPL-3.0"
repository = "https://github.com/data-goblin/pq-cli"
homepage = "https://github.com/data-goblin/pq-cli"
keywords = ["fabric", "power-query", "power-bi", "mashup", "arrow"]
categories = ["command-line-utilities", "development-tools"]
include = ["src/**/*.rs", "Cargo.toml", "Cargo.lock", "README.md", "LICENSE"]

[[bin]]
name = "pq"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
base64 = "0.22"
anyhow = "1"
arrow = { version = "54", features = ["ipc"] }
comfy-table = "7"
