[package]
name = "pq-fabric"
version = "0.1.1"
edition = "2021"
description = "CLI for executing Power Query M expressions via the Microsoft Fabric API; preview partitions, test transformations, inspect steps"
license = "GPL-3.0"
repository = "https://github.com/data-goblin/pq-cli"
homepage = "https://github.com/data-goblin/pq-cli"
keywords = ["fabric", "power-query", "power-bi", "mashup", "arrow"]
categories = ["command-line-utilities", "development-tools"]
include = ["src/**/*.rs", "Cargo.toml", "Cargo.lock", "README.md", "LICENSE"]

[[bin]]
name = "pq"
path = "src/main.rs"

[dependencies]
clap = { version = "=4.6.0", features = ["derive", "env"] }
reqwest = { version = "=0.12.28", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
tokio = { version = "=1.51.0", features = ["macros", "rt-multi-thread", "time", "signal"] }
base64 = "=0.22.1"
anyhow = "=1.0.102"
arrow = { version = "=54.3.1", features = ["ipc"] }
comfy-table = "=7.2.2"
